--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "un project mongo db",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "pm2 kill && pm2 start index.js --watch && pm2 logs",
+    "kill": "pm2 kill"
   },
   "author": "Allan BUSI",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "argon2": "^0.30.2",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2"
+  }
 }
